kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hal
  name: hal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hal
  template:
    metadata:
      labels:
        app: hal
      annotations:
        prometheus.io/path: /api/metrics
        prometheus.io/port: "8000"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
    spec:
      containers:
      - image: weautomateeverything/go2hal:latest
        name: hal
        ports:
        - containerPort: 8000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
