kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hal
spec:
  selector:
    app: hal
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8000
  - protocol: TCP
    name: grpc
    port: 8080
    targetPort: 8080
