kubernetes/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: go2hal
  annotations:
   kubernetes.io/ingress.class: istio
spec:
   rules:
     - host: go2hal.legion.sbsa.local
       http:
         paths:
           - backend:
               serviceName: go2hal
               servicePort: http
