kubernetes/kubernetes.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hal
  name: hal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hal
  template:
    metadata:
      labels:
        app: hal
    spec:
      containers:
      - image: zamedic/go2hal:1.614.1
        name: hal
        ports:
        - containerPort: 8000
          protocol: TCP
        - containerPort: 9162
          protocol: UDP
---
kind: Service
apiVersion: v1
metadata:
  name: hal
spec:
  selector:
    app: hal
  ports:
  - protocol: TCP
    name: snmp
    port: 161
    targetPort: 9162
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8000
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: hal
  annotations:
   kubernetes.io/ingress.class: istio
spec:
   rules:
     - host: ""
       http:
         paths:
           - backend:
               serviceName: hal
               servicePort: http
